# minion

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
src/minion/: __init__.py  brief.py  cli.py  config.py  manifest.py  repo.py  teach.py
src/minion/backends/: __init__.py  base.py  filesystem.py  repowise.py
src/minion/reviewer/: __init__.py  base.py  noop.py
src/minion/teacher/: __init__.py  base.py  noop.py
src/minion/templates/: MINION.md.tmpl  brief.md.tmpl
src/minion/templates/playbooks/: git-setup.md.tmpl  tailscale-join-existing-vm.md.tmpl
src/minion/templates/playbooks/gcp-deploy/: INDEX.md  cloudflare-tunnel.md.tmpl  gcp-project-bootstrap.md.tmpl  ghcr-publish.md.tmpl  logging.md.tmpl  oauth-prod-wiring.md.tmpl  tailscale-join-vm.md.tmpl  terraform-gce-vm.md.tmpl  vm-provision-ansible.md.tmpl
tests/: conftest.py  test_backends.py  test_brief.py  test_cli.py  test_config.py  test_repo.py  test_teach.py
