[project]
name = "minion"
version = "0.1.0"
description = "Local-first repo intelligence coprocessor for AI coding agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.scripts]
minion = "minion:main"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
